design: FE: fix empty gap around superadmin message on top of page in safari

--- a/project-base/src/SS6/ShopBundle/Resources/styles/front/common/components/window/bar.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/front/common/components/window/bar.less
@@ -6,7 +6,7 @@
 	text-align: center;
 
 	&__item {
-		margin: 5px 0;
+		padding: 5px 0;
 	}
 
 	a {
